- Updating styles for desktop header

--- a/assets/theme/theme.scss
+++ b/assets/theme/theme.scss
@@ -22,6 +22,7 @@
 @import "./../styles/bootstrap/type";
 @import "./../styles/bootstrap/alerts";
 @import "./../styles/bootstrap/forms";
+@import "./../styles/bootstrap/media";
 
 // Components
 @import "./../styles/bootstrap/list-group";
