--- a/assets/theme/_grid.scss
+++ b/assets/theme/_grid.scss
@@ -42,13 +42,13 @@ html {
   }
 }
 
-@media (min-width: $screen-md) {
+@media (min-width: $screen-md-min) {
   .container {
     max-width: 960px;
   }
 }
 
-@media (min-width: $screen-lg) {
+@media (min-width: $screen-lg-min) {
   .container {
     max-width: 1140px;
   }
