--- a/components/Layout/FbDesktopHeader/index.scss
+++ b/components/Layout/FbDesktopHeader/index.scss
@@ -36,11 +36,12 @@
       small {
         margin: 0;
         padding: 0 0 0 15px;
-        line-height: 22px;
+        line-height: 20px;
         display: block;
       }
 
       span {
+        margin-top: -8px;
         font-size: $font-size-large;
       }
 
