--- a/components/UI/FbCardBox/index.scss
+++ b/components/UI/FbCardBox/index.scss
@@ -4,7 +4,7 @@
 
 .fb-card {
   &__container {
-    background-color: $card-bg;
+    //background-color: $card-bg;
     //border: 1px solid $card-border;
     border: none;
     border-radius: $card-border-radius;
