--- a/assets/layout/default.scss
+++ b/assets/layout/default.scss
@@ -1,6 +1,6 @@
-@import "../../assets/styles/variables";
-@import "../../assets/styles/custom/variables";
-@import "../../assets/theme/mixins";
+@import "../styles/variables";
+@import "../styles/custom/variables";
+@import "../theme/mixins";
 
 .fb-default-layout {
   &__container {
