--- a/components/Layout/FbNavigation/index.scss
+++ b/components/Layout/FbNavigation/index.scss
@@ -46,6 +46,10 @@
         text-decoration: none;
         transition: all $layout-transition-duration;
 
+        @media (max-width: $screen-sm-max) {
+          color: $navbar-inverse-link-color;
+        }
+
         @media (min-width: $screen-sm-min) AND (max-width: $screen-md-max) {
           height: 45px;
           line-height: 45px;
@@ -58,6 +62,11 @@
       > li.hover > a {
         background-color: darken($gray-darker, 3.5%);
         color: $gray-light;
+
+        @media (max-width: $screen-sm-max) {
+          color: $navbar-inverse-link-hover-color;
+          background-color: $navbar-inverse-link-hover-bg;
+        }
 
         :after,
         :after {
@@ -92,8 +101,10 @@
   }
 
   &__container.collapse {
-    max-height: 0;
-    display: block;
+    @media (max-width: $screen-xs-max) {
+      max-height: 0;
+      display: block;
+    }
   }
 
   &__heading {
@@ -107,6 +118,10 @@
     padding: 10px 15px;
     text-overflow: ellipsis;
     white-space: nowrap;
+
+    @media (max-width: $screen-sm-max) {
+      color: $navbar-inverse-color;
+    }
 
     @media (min-width: $screen-sm-min) AND (max-width: $screen-md-max) {
       margin: 0;
