--- a/components/Layout/FbPhoneHeader/HamburgerButton/index.scss
+++ b/components/Layout/FbPhoneHeader/HamburgerButton/index.scss
@@ -1,4 +1,5 @@
 @import "../../../../assets/variables/colors";
+@import "../../../../assets/variables/buttons";
 
 $bar-line-height:     2px !default;
 $bar-line-width:      22px !default;
