--- a/components/Layout/FbPhoneHeader/ProfileButton/index.scss
+++ b/components/Layout/FbPhoneHeader/ProfileButton/index.scss
@@ -1,4 +1,5 @@
 @import "../../../../assets/variables/colors";
+@import "../../../../assets/variables/buttons";
 @import "../../../../assets/mixins/utilities";
 
 .fb-phone-header-profile-button {
