--- a/assets/variables/buttons.scss
+++ b/assets/variables/buttons.scss
@@ -1,4 +1,33 @@
+@import "colors";
 @import "texts";
+
+$btn-font-weight:                       normal;
+
+$btn-default-color:                     #fff;
+$btn-default-bg:                        #474949;
+$btn-default-border:                    $btn-default-bg;
+
+$btn-primary-color:                     #fff;
+$btn-primary-bg:                        $brand-primary;
+$btn-primary-border:                    $btn-primary-bg;
+
+$btn-success-color:                     #fff;
+$btn-success-bg:                        $brand-success;
+$btn-success-border:                    $btn-success-bg;
+
+$btn-info-color:                        #fff;
+$btn-info-bg:                           $brand-info;
+$btn-info-border:                       $btn-info-bg;
+
+$btn-warning-color:                     #fff;
+$btn-warning-bg:                        $brand-warning;
+$btn-warning-border:                    $btn-warning-bg;
+
+$btn-danger-color:                      #fff;
+$btn-danger-bg:                         $brand-danger;
+$btn-danger-border:                     $btn-danger-bg;
+
+$btn-link-disabled-color:               $gray-light;
 
 $btn-border-radius-base:                3px;
 $btn-border-radius-large:               4px;
