--- a/components/Forms/FbLabel/index.scss
+++ b/components/Forms/FbLabel/index.scss
@@ -13,7 +13,7 @@
 
     &[data-orientation="horizontal"] {
       @media (min-width: $screen-sm-min) {
-        @include gridRow;
+        @include gridCel;
 
         -webkit-box-flex: 0;
         -ms-flex: 0 0 25%;
@@ -26,7 +26,7 @@
       }
 
       @media (min-width: $screen-md-min) {
-        @include gridRow;
+        @include gridCel;
 
         -webkit-box-flex: 0;
         -ms-flex: 0 0 33.333333%;
