--- a/components/Layout/FbPhoneHeader/index.scss
+++ b/components/Layout/FbPhoneHeader/index.scss
@@ -41,6 +41,7 @@
     position: relative;
     text-align: center;
     font-size: 40px;
+    text-transform: lowercase;
 
     &-right {
       float: right;
@@ -52,9 +53,16 @@
       line-height: 30px;
       font-size: 20px;
     }
+
+    &-textual {
+      font-size: 15px;
+      width: auto;
+      text-align: right;
+      margin-right: 10px;
+    }
   }
 
-  &__add-button {
+  &__add-button.fb-btn {
     position: absolute;
     bottom: -15px;
     right: 25px;
