--- a/assets/theme/_toaster.scss
+++ b/assets/theme/_toaster.scss
@@ -68,7 +68,7 @@
 
 @media (max-width: $screen-xs-max) {
   .toasted-container.bottom-center {
-    top: 50px;
+    top: 0;
     bottom: initial !important;
   }
 
