--- a/assets/variables/screen.scss
+++ b/assets/variables/screen.scss
@@ -1,5 +1,6 @@
 // z-indexes
 $zindex-layout-header:                  1030 !default;
+$zindex-layout-footer:                  1000 !default;
 $zindex-layout-content:                 1000 !default;
 $zindex-layout-sidebar:                 1000 !default;
 $zindex-sidenav-subnav:                 1030 !default;
