--- a/components/UI/FbPageLoading/index.scss
+++ b/components/UI/FbPageLoading/index.scss
@@ -3,9 +3,11 @@
 
 .fb-page-loading {
   &__container {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     display: table;
     height: 100%;
     width: 100%;
