--- a/components/Layout/FbDesktopHeader/index.scss
+++ b/components/Layout/FbDesktopHeader/index.scss
@@ -30,7 +30,7 @@
     h1 {
       float: left;
       line-height: 50px;
-      padding: 15px 15px 10px 15px;
+      padding: 15px 15px 10px 0;
       margin: 0;
       font-size: $font-size-large;
 
