--- a/components/Layout/FbPhoneHeader/Heading/index.scss
+++ b/components/Layout/FbPhoneHeader/Heading/index.scss
@@ -3,6 +3,8 @@
 
 .fb-phone-header-heading {
   &__container {
+    height: 70px;
+
     h1 {
       float: left;
       margin: 8px 0 0 0;
@@ -10,7 +12,7 @@
       white-space: nowrap;
       font-size: 18px;
       line-height: 20px;
-      padding: 0;
+      padding: 10px 0;
       text-align: center;
       color: $brand-primary-contrast;
 
@@ -59,7 +61,7 @@
 
     > div {
       h1 {
-        margin: 0;
+        margin: 0 0 0 10px;
         padding: 0;
         white-space: nowrap;
         text-align: left;
@@ -90,13 +92,24 @@
     }
   }
 
+  &__logo {
+    margin-top: 10px;
+  }
+
   &__icon {
     height: 50px;
     width: 50px;
     line-height: 50px;
     font-size: 30px;
-    float: left;
+    float: right;
     text-align: center;
     display: inline-block;
+  }
+
+  &__icon[role="button"] {
+    background-color: transparent;
+    background-image: none;
+    border: none;
+    outline: none;
   }
 }
