--- a/components/Layout/FbPhoneHeader/index.scss
+++ b/components/Layout/FbPhoneHeader/index.scss
@@ -32,9 +32,9 @@
     border: none;
     display: block;
     float: left;
-    height: 50px;
+    height: 60px;
     width: 50px;
-    line-height: 50px;
+    line-height: 60px;
     outline: none;
     overflow: hidden;
     padding: 0;
@@ -62,9 +62,40 @@
     }
   }
 
+  &__info {
+    padding: 5px 10px 0;
+  }
+
   &__add-button.fb-btn {
     position: absolute;
     bottom: -15px;
     right: 25px;
+    width: 36px;
+    height: 36px;
+    padding-left: 12px;
+    padding-rigt: 12px;
+    text-align: center;
+
+    transition-duration: 0.28s;
+    transition-property: box-shadow, transform, opacity;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    user-select: none;
+
+    @include box-shadow(0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12));
+
+    &:before {
+      border-radius: inherit;
+      bottom: 0;
+      color: inherit;
+      content: "";
+      left: 0;
+      opacity: 0;
+      pointer-events: none;
+      position: absolute;
+      right: 0;
+      top: 0;
+      transition: opacity 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+      background-color: currentColor;
+    }
   }
 }
