--- a/components/Layout/FbPhoneHeader/index.scss
+++ b/components/Layout/FbPhoneHeader/index.scss
@@ -73,7 +73,7 @@
     width: 36px;
     height: 36px;
     padding-left: 12px;
-    padding-rigt: 12px;
+    padding-right: 12px;
     text-align: center;
 
     transition-duration: 0.28s;
