--- a/components/UI/FbComponentLoading/index.scss
+++ b/components/UI/FbComponentLoading/index.scss
@@ -25,7 +25,7 @@
       top: 0;
       border-width: $spinner-lg-border-width;
       height: $spinner-lg-size;
-      margin: half(-$spinner-lg-size) 0 0 half(-$spinner-lg-size);
+      margin: 0;
       width: $spinner-lg-size;
     }
 
