--- a/components/UI/FbModalWindow/index.scss
+++ b/components/UI/FbModalWindow/index.scss
@@ -3,6 +3,7 @@
 @import "../../../assets/variables/borders";
 @import "../../../assets/variables/texts";
 @import "../../../assets/mixins/utilities";
+@import "../../../assets/variables/spinners";
 
 .fb-modal-window {
   &__container {
@@ -129,6 +130,68 @@
 
     @include clearfix;
   }
+
+  &__loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: table;
+    height: 100%;
+    width: 100%;
+    background: #fff;
+    z-index: 1030;
+
+    &-box {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+
+      div:first-child {
+        display: block;
+        text-align: center;
+
+        svg {
+          width: 225px;
+        }
+
+        .dark_color {
+          fill: $gray-dark;
+          fill-rule: nonzero;
+        }
+
+        .brand_color {
+          fill: $brand-primary;
+          fill-rule: nonzero;
+        }
+      }
+    }
+
+    &-spinner {
+      position: relative;
+      margin-top: 35px;
+
+      &:before,
+      &:after {
+        border-color: $spinner-border-color;
+        border-radius: 50%;
+        border-style: solid;
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+
+        @include spinner-size($spinner-lg-size, $spinner-lg-border-width);
+      }
+
+      &:after {
+        animation: loading-spinner-animation 0.6s linear;
+        animation-iteration-count: infinite;
+        border-color: $spinner-primary-color transparent transparent;
+      }
+    }
+  }
 }
 
 /*
@@ -148,7 +211,17 @@
   @include opacity(0);
 }
 
-.modal-enter .modal-dialog {
+.modal-enter .fb-modal-window__dialog {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+}
+
+@keyframes loading-spinner-animation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
