--- a/assets/mixins/utilities.scss
+++ b/assets/mixins/utilities.scss
@@ -108,3 +108,9 @@
   -moz-box-sizing: $boxmodel;
   box-sizing: $boxmodel;
 }
+
+@mixin transition($transition...) {
+  -webkit-transition: $transition;
+  -o-transition: $transition;
+  transition: $transition;
+}
