--- a/components/Layout/FbUserSideNavigation/index.scss
+++ b/components/Layout/FbUserSideNavigation/index.scss
@@ -201,11 +201,11 @@
       margin-left: 2px;
       vertical-align: middle;
       border-top: 0;
-      border-top:   $caret-width-base solid \9; // IE8
-      border-right: $caret-width-base solid transparent;
-      border-left:  $caret-width-base solid transparent;
-      border-bottom: $caret-width-base dashed;
-      border-bottom: $caret-width-base solid \9; // IE8
+      border-top:   4px solid \9; // IE8
+      border-right: 4px solid transparent;
+      border-left:  4px solid transparent;
+      border-bottom: 4px dashed;
+      border-bottom: 4px solid \9; // IE8
       content: "";
     }
   }
