--- a/assets/_scaffolding.scss
+++ b/assets/_scaffolding.scss
@@ -1,11 +1,7 @@
 @import "./variables/colors";
 @import "./variables/borders";
 @import "./variables/texts";
-
-//
-// Scaffolding
-// --------------------------------------------------
-
+@import "./mixins/utilities";
 
 // Reset the box-sizing
 //
@@ -19,23 +15,6 @@
 *:after {
   @include box-sizing(border-box);
 }
-
-
-// Body reset
-
-html {
-  font-size: 10px;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-
-body {
-  font-family: $font-family-base;
-  font-size: $font-size-base;
-  line-height: $line-height-base;
-  color: $text-color;
-  background-color: $body-bg;
-}
-
 
 // Avoid 300ms click delay on touch devices that support the `touch-action` CSS property.
 //
@@ -55,18 +34,6 @@ textarea {
   touch-action: manipulation;
 }
 
-
-// Reset fonts for relevant elements
-input,
-button,
-select,
-textarea {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
-
-
 input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
@@ -77,6 +44,16 @@ input[type="month"] {
   //
   // Bug report: https://github.com/twbs/bootstrap/issues/11266
   -webkit-appearance: listbox;
+}
+
+// Reset fonts for relevant elements
+input,
+button,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 textarea {
@@ -105,7 +82,6 @@ a {
   }
 }
 
-
 // Figures
 //
 // We reset this here because previously Normalize had no `figure` margins. This
@@ -115,7 +91,6 @@ figure {
   margin: 0;
 }
 
-
 // Images
 
 img {
@@ -124,7 +99,10 @@ img {
 
 // Responsive images (ensure images don't scale beyond their parents)
 .img-responsive {
-  @include img-responsive;
+  // Keep them at most 100% wide
+  display: block;
+  max-width: 100%; // Part 1: Set a maximum relative to the parent
+  height: auto; // Part 2: Scale the height according to the width, otherwise you get stretching
 }
 
 // Rounded corners
@@ -154,7 +132,6 @@ img {
   border-radius: 50%; // set radius in percents
 }
 
-
 // Horizontal rules
 
 hr {
@@ -163,7 +140,6 @@ hr {
   border: 0;
   border-top: 1px solid $hr-border;
 }
-
 
 // Only display content to screen readers
 //
@@ -206,7 +182,6 @@ hr {
   cursor: pointer;
 }
 
-
 // Suppress the focus outline on elements that cannot be accessed via keyboard.
 // This prevents an unwanted focus outline from appearing around elements that
 // might still respond to pointer events.
@@ -214,7 +189,6 @@ hr {
 [tabindex="-1"]:focus {
   outline: none !important;
 }
-
 
 // Make viewport responsive
 //
