--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -1,29 +1,79 @@
 @import "./variables/colors";
 @import "./variables/texts";
-@import "./mixins/utilities";
+
+@import "normalize.css/normalize";
+
+@import "./scaffolding";
+@import "./print";
 
 //
 // THEME
 //
 
 html {
+  font-size: 10px;
   font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
   height: 100%;
+  -ms-text-size-adjust: 100%;
   -ms-overflow-style: scrollbar;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 body {
-  padding-top: 0;
+  padding: 0;
   margin: 0;
   overflow-x: hidden;
   width: 100%;
   height: 100%;
   max-height: 100%;
-  font-family: "Roboto", sans-serif;
-  font-size: 13px;
-  line-height: 1.538462;
-  color: $gray;
+  font-family: $font-family-base;
+  font-size: $font-size-base;
+  line-height: $line-height-base;
+  color: $text-color;
   background-color: $body-bg;
 }
+
+// Headings
+// -------------------------
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $headings-font-family;
+  font-weight: $headings-font-weight;
+  line-height: $headings-line-height;
+  color: $headings-color;
+
+  small {
+    font-weight: normal;
+    line-height: 1;
+    color: $headings-small-color;
+  }
+}
+
+h1,
+h2,
+h3 {
+  margin-top: $line-height-computed;
+  margin-bottom: ($line-height-computed / 2);
+
+  small {
+    font-size: 65%;
+  }
+}
+h4,
+h5,
+h6 {
+  margin-top: ($line-height-computed / 2);
+  margin-bottom: ($line-height-computed / 2);
+
+  small {
+    font-size: 75%;
+  }
+}
+
+h1 { font-size: $font-size-h1; }
+h2 { font-size: $font-size-h2; }
+h3 { font-size: $font-size-h3; }
+h4 { font-size: $font-size-h4; }
+h5 { font-size: $font-size-h5; }
+h6 { font-size: $font-size-h6; }
