--- a/components/UI/FbButton/index.scss
+++ b/components/UI/FbButton/index.scss
@@ -1,7 +1,61 @@
-@import "../../../assets/variables/buttons";
 @import "../../../assets/variables/colors";
+@import "../../../assets/variables/texts";
 @import "../../../assets/variables/screen";
 @import "../../../assets/mixins/utilities";
+
+$btn-font-weight:               normal;
+
+$btn-default-color:             #fff;
+$btn-default-bg:                #474949;
+$btn-default-border:            $btn-default-bg;
+
+$btn-primary-color:             #fff;
+$btn-primary-bg:                $brand-primary;
+$btn-primary-border:            $btn-primary-bg;
+
+$btn-success-color:             #fff;
+$btn-success-bg:                $brand-success;
+$btn-success-border:            $btn-success-bg;
+
+$btn-info-color:                #fff;
+$btn-info-bg:                   $brand-info;
+$btn-info-border:               $btn-info-bg;
+
+$btn-warning-color:             #fff;
+$btn-warning-bg:                $brand-warning;
+$btn-warning-border:            $btn-warning-bg;
+
+$btn-danger-color:              #fff;
+$btn-danger-bg:                 $brand-danger;
+$btn-danger-border:             $btn-danger-bg;
+
+$btn-link-disabled-color:       $gray-light;
+
+$btn-border-radius-base:        3px;
+$btn-border-radius-large:       4px;
+$btn-border-radius-small:       3px;
+
+$btn-background-position:       null !default;
+$btn-background-size:           null !default;
+$btn-box-shadow:                none !default;
+$btn-outline:                   none !default;
+$btn-text-transform:            none !default;
+$btn-transition:                all 0.3s !default;
+
+$btn-active-gradient:           none !default;
+$btn-active-background-size:    null !default;
+$btn-active-box-shadow:         none !default;
+
+$btn-pill-border-radius:        10em !default;
+$btn-pill-padding-horizontal:   1.25em !default;
+
+$btn-thick-border-width:        2px !default;
+$btn-thick-font-weight:         600 !default;
+
+$btn-expander-font-size:        $font-size-small !default;
+$btn-expander-line-height:      ceil($btn-expander-font-size / 2) !default;
+
+$btn-badge-height-half:         ceil(sum(2px, 2px * 2, 11px) / 2) !default;
 
 // Button sizes
 @mixin button-size($padding-vertical, $padding-horizontal, $font-size, $line-height, $border-radius) {
@@ -84,79 +138,6 @@
   }
 }
 
-// Variants
-@mixin button-variant($color, $background, $border) {
-  background-color: $background;
-  border-color: $border;
-  color: $color;
-
-  svg {
-    color: $color;
-  }
-
-  &:focus,
-  &.focus {
-    background-color: $background;
-    border-color: $border;
-    color: $color;
-
-    svg {
-      color: $color;
-    }
-  }
-
-  &:hover {
-    background-color: darken($background, 10%);
-    border-color: darken($border, 10%);
-    color: $color;
-
-    svg {
-      color: $color;
-    }
-  }
-
-  &:active,
-  &.active,
-  .open > &.dropdown-toggle {
-    background-color: darken($background, 10%);
-    border-color: darken($border, 10%);
-    color: $color;
-
-    svg {
-      color: $color;
-    }
-
-    &:hover,
-    &:focus,
-    &.focus {
-      background-color: darken($background, 15%);
-      border-color: darken($border, 15%);
-      color: $color;
-
-      svg {
-        color: $color;
-      }
-    }
-  }
-
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    &:hover,
-    &:focus,
-    &.focus {
-      background-color: $background;
-      border-color: $border;
-    }
-  }
-
-  .badge {
-    background-color: $color;
-    color: $background;
-  }
-}
-
-// Outline variants
 @mixin button-outline-variant($border, $color) {
   background-color: #fff;
   border-color: $border;
