--- a/assets/variables/screen.scss
+++ b/assets/variables/screen.scss
@@ -53,3 +53,13 @@ $padding-small-horizontal:              10px;
 
 $padding-xs-vertical:                   1px;
 $padding-xs-horizontal:                 5px;
+
+$margin-xs:                             0.3125rem;
+$margin-sm:                             0.625rem;
+$margin-md:                             0.9375rem;
+$margin-lg:                             1.875rem;
+
+$padding-xs:                            0.3125rem;
+$padding-sm:                            0.625rem;
+$padding-md:                            0.9375rem;
+$padding-lg:                            1.875rem;
