--- a/components/Forms/FbLabel/index.scss
+++ b/components/Forms/FbLabel/index.scss
@@ -9,6 +9,14 @@
     margin-bottom: 5px;
     font-weight: 700;
 
+    &-required {
+      &:after {
+        content: '*';
+        display: inline-block;
+        color: $brand-primary;
+      }
+    }
+
     &[data-orientation="inline"] {
       @media (min-width: $screen-sm-min) {
         margin-bottom: 0;
