--- a/src/components/forms/FbFieldContainer/index.scss
+++ b/src/components/forms/FbFieldContainer/index.scss
@@ -200,23 +200,49 @@
       &:focus {
         z-index: 3;
       }
-    }
 
-    input,
-    textarea {
       @include border-radius(0);
     }
 
-    input:last-child,
-    textarea:last-child {
-      @include border-left-radius(0);
+    span:last-child input,
+    span:last-child textarea {
       @include border-right-radius($input-border-radius);
     }
 
-    input:first-child,
-    textarea:first-child {
-      @include border-right-radius(0);
+    span:first-child input,
+    span:first-child textarea {
       @include border-left-radius($input-border-radius);
+    }
+
+    .fb-field-container__input-group-addon {
+      display: table-cell;
+      width: 1%;
+      white-space: nowrap;
+      vertical-align: middle;
+
+      padding: $padding-vertical $padding-horizontal;
+      font-size: $font-size;
+      font-weight: normal;
+      line-height: 1;
+      color: $text-default;
+      text-align: center;
+      background-color: $input-group-addon-bg;
+    }
+
+    span:first-child {
+      .fb-field-container__input-group-addon {
+        @include border-left-radius($input-border-radius);
+        border: 1px solid $input-group-addon-border-color;
+        border-right: 0;
+      }
+    }
+
+    span:last-child {
+      .fb-field-container__input-group-addon {
+        @include border-right-radius($input-border-radius);
+        border: 1px solid $input-group-addon-border-color;
+        border-left: 0;
+      }
     }
   }
 
@@ -228,37 +254,6 @@
   &__input-field {
     display: block;
     position: relative;
-  }
-
-  &__input-group-addon {
-    display: table-cell;
-    width: 1%;
-    white-space: nowrap;
-    vertical-align: middle;
-
-    padding: $padding-vertical $padding-horizontal;
-    font-size: $font-size;
-    font-weight: normal;
-    line-height: 1;
-    color: $text-default;
-    text-align: center;
-    background-color: $input-group-addon-bg;
-    border: 1px solid $input-group-addon-border-color;
-    @include border-radius($input-border-radius);
-
-    &:not(:first-child):not(:last-child) {
-      @include border-radius(0);
-    }
-
-    &:first-child {
-      @include border-right-radius(0);
-      border-right: 0;
-    }
-
-    &:last-child {
-      @include border-left-radius(0);
-      border-left: 0;
-    }
   }
 
   &__input-feedback {
