--- a/src/assets/variables/panels.scss
+++ b/src/assets/variables/panels.scss
@@ -2,8 +2,8 @@
 @import "borders";
 
 $panel-bg:                              #fff;
-$panel-body-padding:                    15px;
-$panel-heading-padding:                 10px 15px;
+$panel-body-padding:                    1.5rem;
+$panel-heading-padding:                 1rem 1.5rem;
 $panel-footer-padding:                  $panel-heading-padding;
 $panel-border-radius:                   $border-radius-base;
 
