--- a/src/assets/variables/screen.scss
+++ b/src/assets/variables/screen.scss
@@ -5,9 +5,8 @@ $zindex-layout-content:                 1000 !default;
 $zindex-layout-sidebar:                 1000 !default;
 $zindex-sidenav-subnav:                 1030 !default;
 $zindex-dropdown:                       1000 !default;
-
-$zindex-modal-background:               1040;
-$zindex-modal:                          9998;
+$zindex-modal-background:               1040 !default;
+$zindex-modal:                          9998 !default;
 
 // sizes
 $screen-xs:                             480px;
@@ -42,17 +41,17 @@ $layout-sidebar-collapsed-width:        60px;
 
 $layout-transition-duration:            0.3s !default;
 
-$padding-base-vertical:                 6px;
-$padding-base-horizontal:               12px;
+$padding-base-vertical:                 0.5rem;
+$padding-base-horizontal:               1rem;
 
-$padding-large-vertical:                10px;
-$padding-large-horizontal:              16px;
+$padding-xs-vertical:                   0.5rem;
+$padding-xs-horizontal:                 1rem;
 
-$padding-small-vertical:                5px;
-$padding-small-horizontal:              10px;
+$padding-sm-vertical:                   1rem;
+$padding-sm-horizontal:                 1.5rem;
 
-$padding-xs-vertical:                   1px;
-$padding-xs-horizontal:                 5px;
+$padding-md-vertical:                   1.5rem;
+$padding-md-horizontal:                 3rem;
 
 $margin-xs:                             0.5rem;
 $margin-sm:                             1rem;
