--- a/src/components/forms/FbCheckbox/index.scss
+++ b/src/components/forms/FbCheckbox/index.scss
@@ -4,6 +4,7 @@
   &__container {
     display: inline-block;
     padding: $checkbox-padding;
+    margin: 0;
     position: relative;
 
     &[data-error="true"] {
@@ -17,21 +18,15 @@
         }
       }
     }
-
-    input {
-      position: absolute;
-      left: 0.1rem;
-      top: ($indicator-margin + .1rem);
-    }
   }
 
   &__label {
     cursor: pointer;
     font-weight: 400;
-    line-height: 14px;
-    margin-bottom: 0;
-    min-height: 14px;
-    min-width: 14px;
+    line-height: $checkbox-indicator-size;
+    margin: 0;
+    height: $checkbox-indicator-size;
+    min-width: $checkbox-indicator-size;
     position: relative;
     vertical-align: middle;
     display: inline-block;
@@ -46,6 +41,10 @@
     opacity: 0;
     filter: alpha(opacity=0);
     position: absolute;
+    left: 0;
+    top: 0;
+    width: $checkbox-indicator-size;
+    height: $checkbox-indicator-size;
     z-index: -1;
 
     &:checked ~ .fb-form-checkbox__indicator,
@@ -84,7 +83,7 @@
     display: block;
     position: absolute;
     left: 0;
-    top: $indicator-margin;
+    top: 0;
     width: $checkbox-indicator-size;
     height: $checkbox-indicator-size;
 
@@ -96,7 +95,7 @@
       display: block;
       line-height: $indicator-line-height;
       font-size: $indicator-font-size;
-      margin-left: ceil($checkbox-indicator-size * 1.5);
+      margin-left: sum($checkbox-indicator-size, 1rem);
 
       -webkit-user-select: text;
       -moz-user-select: text;
