--- a/src/components/ui/FbModalForm/index.scss
+++ b/src/components/ui/FbModalForm/index.scss
@@ -18,7 +18,8 @@
     flex-direction: row;
     align-items: center;
 
-    > div {
+    > div,
+    .fb-ui-spinner__container {
       margin-left: auto;
       margin-right: auto;
     }
@@ -32,7 +33,8 @@
     .fb-ui-spinner__container:after {
       width: 10rem;
       height: 10rem;
-      margin: -5rem 0 0 -5rem
+      margin: -5rem 0 0 -5rem;
+      border-width: 4px;
     }
   }
 }
