No results component

--- a/src/components/ui/FbIconWithChild/index.scss
+++ b/src/components/ui/FbIconWithChild/index.scss
@@ -3,21 +3,20 @@
 .fb-icon-with-child {
   &__container {
     display: inline-block;
-    line-height: 1;
     position: relative;
+  }
 
-    &-child {
-      display: block;
-      bottom: 0;
-      position: absolute;
-      right: 0;
-      z-index: 2;
-      border-radius: 50%;
-      color: $child-color;
-      background-color: $child-background-color;
-      font-size: $child-font-size;
+  &-child-icon {
+    display: block;
+    bottom: 0;
+    position: absolute;
+    right: 0;
+    z-index: 2;
+    border-radius: 50%;
+    color: $child-color;
+    background-color: $child-background-color;
+    font-size: $child-font-size;
 
-      @include child-shadow;
-    }
+    @include child-shadow;
   }
 }
