Fixing component name

--- a/src/components/ui/FbNoResults/index.scss
+++ b/src/components/ui/FbNoResults/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/ui/fb-no-results";
 
-.fb-no-results {
+.fb-ui-no-results {
   &__container {
     display: inline-block;
     position: relative;
