Fixing class names

--- a/src/components/ui/FbIconWithChild/index.scss
+++ b/src/components/ui/FbIconWithChild/index.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/components/ui/fb-icon-with-child";
 
-.fb-icon-with-child {
+.fb-ui-icon-with-child {
   &__container {
     display: inline-block;
     position: relative;
