--- a/src/components/ui/FbNoResults/index.scss
+++ b/src/components/ui/FbNoResults/index.scss
@@ -5,7 +5,7 @@
     display: inline-block;
     position: relative;
 
-    .fb-icon-with-child {
+    .fb-ui-icon-with-child {
       &__container {
         &__icon {
           color: $icon-color;
