--- a/src/components/ui/FbNoResults/index.scss
+++ b/src/components/ui/FbNoResults/index.scss
@@ -4,6 +4,7 @@
   &__container {
     display: inline-block;
     position: relative;
+    text-align: center;
 
     .fb-ui-icon-with-child {
       &__icon {
