--- a/src/assets/components/ui/fb-items-container.scss
+++ b/src/assets/components/ui/fb-items-container.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/mixins/utilities";
 
-$container-margin:                             0 0 1.5rem 0;
+$container-margin:                             1.5rem 0 0 0;
 
 $heading-container-height:                     3rem;
 $heading-container-border-color:               #ddd;
