--- a/src/components/ui/FbItemsContainer/index.scss
+++ b/src/components/ui/FbItemsContainer/index.scss
@@ -4,8 +4,8 @@
   &__container {
     margin: $container-margin;
 
-    &:last-child {
-      margin-bottom: 0;
+    &:first-child {
+      margin-top: 0;
     }
   }
 
