Added default color link button

--- a/src/assets/components/ui/fb-button.scss
+++ b/src/assets/components/ui/fb-button.scss
@@ -31,6 +31,11 @@ $btn-link-hover-color:                #d9230f;
 $btn-link-hover-decoration:           underline;
 $btn-link-disabled-color:             #808080;
 
+$btn-link-default-color:              #474949;
+$btn-link-default-hover-color:        #474949;
+$btn-link-default-hover-decoration:   underline;
+$btn-link-default-disabled-color:     #ddd;
+
 $btn-border-radius-base:              3px;
 $btn-border-radius-large:             4px;
 $btn-border-radius-small:             3px;
