--- a/src/components/ui/FbButton/index.scss
+++ b/src/components/ui/FbButton/index.scss
@@ -184,6 +184,65 @@ a.fb-ui-button {
       }
     }
   }
+
+  &[data-variant="link-default"] {
+    color: $btn-link-default-color;
+    font-weight: normal;
+    border-radius: 0;
+
+    svg {
+      color: $btn-link-default-color;
+    }
+
+    &,
+    &:active,
+    &.active,
+    &[disabled],
+    fieldset[disabled] & {
+      background-color: transparent;
+      @include disabled-shadow;
+    }
+
+    &,
+    &:active,
+    &.active {
+      background-color: transparent;
+      background-image: none;
+      background-size: auto;
+      box-shadow: none;
+    }
+
+    &,
+    &:hover,
+    &:focus,
+    &:active {
+      border-color: transparent;
+    }
+
+    &:hover,
+    &:focus {
+      color: $btn-link-default-hover-color;
+      text-decoration: $btn-link-default-hover-decoration;
+      background-color: transparent;
+
+      svg {
+        color: $btn-link-default-hover-color;
+      }
+    }
+
+    &[disabled],
+    fieldset[disabled] & {
+      &:hover,
+      &:focus {
+        color: $btn-link-default-disabled-color;
+        text-decoration: none;
+
+        svg {
+          color: $btn-link-default-disabled-color;
+        }
+      }
+    }
+  }
 }
 
 // Buttons sizes
