Try to solve active state

--- a/src/components/ui/FbButton/index.scss
+++ b/src/components/ui/FbButton/index.scss
@@ -37,6 +37,14 @@
     }
   }
 
+  &:active,
+  &.active {
+    outline: 0;
+    background-image: none;
+
+    @include active-shadow;
+  }
+
   &.disabled,
   &[disabled],
   fieldset[disabled] & {
@@ -45,6 +53,13 @@
     filter: alpha(opacity=65);
 
     @include disabled-shadow;
+  }
+
+  &:active,
+  &.active {
+    background-image: $btn-active-gradient;
+    background-size: $btn-active-background-size;
+    box-shadow: $btn-active-box-shadow;
   }
 }
 
@@ -121,6 +136,8 @@ a.fb-ui-button {
     }
 
     &,
+    &:active,
+    &.active,
     &[disabled],
     fieldset[disabled] & {
       background-color: transparent;
@@ -128,8 +145,18 @@ a.fb-ui-button {
     }
 
     &,
+    &:active,
+    &.active {
+      background-color: transparent;
+      background-image: none;
+      background-size: auto;
+      box-shadow: none;
+    }
+
+    &,
     &:hover,
-    &:focus {
+    &:focus,
+    &:active {
       border-color: transparent;
     }
 
@@ -168,6 +195,8 @@ a.fb-ui-button {
     }
 
     &,
+    &:active,
+    &.active,
     &[disabled],
     fieldset[disabled] & {
       background-color: transparent;
@@ -175,8 +204,18 @@ a.fb-ui-button {
     }
 
     &,
+    &:active,
+    &.active {
+      background-color: transparent;
+      background-image: none;
+      background-size: auto;
+      box-shadow: none;
+    }
+
+    &,
     &:hover,
-    &:focus {
+    &:focus,
+    &:active {
       border-color: transparent;
     }
 
