Working on ios style modal

--- a/src/assets/components/ui/fb-modal.scss
+++ b/src/assets/components/ui/fb-modal.scss
@@ -51,3 +51,9 @@ $screen-desktop-min:                  $screen-md-min;
     filter: alpha(opacity=50);
   }
 }
+
+@mixin flex-phone-header {
+  @include flexRow;
+
+  flex-wrap: nowrap;
+}
