--- a/src/components/ui/FbModalWindow/index.scss
+++ b/src/components/ui/FbModalWindow/index.scss
@@ -1,25 +1,5 @@
 @import "../../../assets/components/ui/fb-modal";
 
-.fb-ui-modal-window__container[data-size=md] {
-  div.fb-ui-modal-window__window {
-    padding-top: 1rem;
-  }
-
-  div.fb-ui-modal-window__dialog {
-    width: 99vw;
-    max-width: 99vw;
-    height: 98vh;
-
-    .fb-ui-modal-window__content {
-      height: 100%;
-    }
-  }
-
-  div.fb-ui-modal-window__body {
-    padding: 1.5rem 0.5rem;
-  }
-}
-
 .fb-ui-modal-window {
   &__container {
     position: fixed;
@@ -135,14 +115,24 @@
 
       &-heading {
         flex-grow: 1;
+
+        h4 {
+          text-align: center;
+        }
       }
 
       &-left-button {
-
+        order: -1;
       }
 
       &-right-button {
 
+      }
+
+      &-left-button,
+      &-right-button {
+        color: $header-color;
+        font-size: $font-size;
       }
     }
   }
