Fixing button color

--- a/src/components/ui/FbModalWindow/index.scss
+++ b/src/components/ui/FbModalWindow/index.scss
@@ -133,6 +133,10 @@
       &-right-button {
         color: $header-color;
         font-size: $font-size;
+
+        .fb-ui-button {
+          color: $header-color;
+        }
       }
     }
   }
