--- a/src/assets/components/ui/fb-modal.scss
+++ b/src/assets/components/ui/fb-modal.scss
@@ -15,6 +15,7 @@ $header-background-color:             #d9230f;
 $header-color:                        #fff;
 $header-close-color:                  #000;
 $header-close-shadow:                 0 1px 0 #fff;
+$header-button-font-size:             1.4rem;
 
 $footer-padding:                      0 1.5rem 1.5rem 1.5rem;
 
