--- a/src/components/ui/FbModalHeader/index.scss
+++ b/src/components/ui/FbModalHeader/index.scss
@@ -2,6 +2,49 @@
 
 .fb-ui-modal-header {
   &__container {
+    &[data-variant="phone"] {
+      .fb-ui-modal-header {
+        &__buttons {
+          @include flex-phone-header;
+
+          &-left-button {
+            text-align: left;
+          }
+
+          &-right-button {
+            text-align: right;
+          }
+
+          &-left-button,
+          &-right-button {
+            color: $header-color;
+            font-size: $header-button-font-size;
+
+            .fb-ui-button {
+              color: $header-color;
+              font-size: $header-button-font-size;
+              text-align: center;
+
+              &:hover,
+              &:focus,
+              &:active {
+                outline: 0;
+                background-image: none;
+                color: $header-color;
+                text-decoration: none;
+
+                svg {
+                  color: $header-color;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &__heading {
     text-align: center;
   }
 
@@ -26,54 +69,6 @@
       color: #000;
       text-decoration: none;
       cursor: pointer;
-    }
-  }
-
-  &__variant {
-    &-phone {
-      &-phone {
-        @include flex-phone-header;
-
-        &-heading {
-          flex-grow: 1;
-
-          h4 {
-            text-align: center;
-          }
-        }
-
-        &-left-button {
-          order: -1;
-        }
-
-        &-right-button {
-
-        }
-
-        &-left-button,
-        &-right-button {
-          color: $header-color;
-          font-size: $header-button-font-size;
-
-          .fb-ui-button {
-            color: $header-color;
-            font-size: $header-button-font-size;
-
-            &:hover,
-            &:focus,
-            &:active {
-              outline: 0;
-              background-image: none;
-              color: $header-color;
-              text-decoration: none;
-
-              svg {
-                color: $header-color;
-              }
-            }
-          }
-        }
-      }
     }
   }
 }
