Fixing class names

--- a/src/components/layout/FbPhoneMenu/index.scss
+++ b/src/components/layout/FbPhoneMenu/index.scss
@@ -15,7 +15,7 @@
     background-color: $backdrop-background-color;
   }
 
-  &__items {
+  &__content {
     position: fixed;
     left: 0;
     bottom: 0;
